<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/detailsItem"
        android:title="@string/DetailsT"
        android:icon="@drawable/dino_1"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/mainItem"
        android:title="@string/Main"
        android:icon="@drawable/dino_2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/favouriteItem"
        android:title="@string/Favourites"
        android:icon="@drawable/dino_3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/helpItem"
        android:title="@string/Help"
        android:icon="@drawable/light"
        app:showAsAction="always"/>
</menu>